soluciono detalles en el formato de los objetos enviados
