# Mi-ecommerce/swagger.yaml
@@ -49,13 +49,13 @@ paths:
                 items:
                   type: object
                   properties:
-                    id:
+                    picture_id:
                       type: number
-                    url:
+                    picture_url:
                       type: string
-                    description:
+                    picture_description:
                       type: string
-                    productId:
+                    product_id:
                       type: number
         "400":
           description: Parametro de entrada no es correcto
@@ -65,8 +65,9 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string
-                  message:
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
                     example: El parametro de entrada no es correcto
 
@@ -78,8 +79,9 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string
-                  message:
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
                     example: Product nor found
 
@@ -90,7 +92,10 @@ paths:
               schema:
                 type: object
                 properties:
-                  message:
+                  error:  
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
                     example: No esta autorizado para acceder a este recurso
 
@@ -102,7 +107,8 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string
+                    type: boolean
+                    example: true
                   message:
                     type: string
 
@@ -152,13 +158,13 @@ paths:
               schema:
                 type: object
                 properties:
-                  id:
+                  picture_id:
                     type: number
-                  url:
+                  picture_url:
                     type: string
-                  description:
+                  dpicture_description:
                     type: string
-                  productId:
+                  product_id:
                     type: number
 
         "400":
@@ -169,8 +175,9 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string
-                  message:
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
                     example: El parametro de entrada no es correcto
 
@@ -183,7 +190,7 @@ paths:
                 properties:
                   error:
                     type: string
-                  message:
+                  msg:
                     type: string
                     example: Producto no encontrado
 
@@ -194,7 +201,10 @@ paths:
               schema:
                 type: object
                 properties:
-                  message:
+                  error:  
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
                     example: No esta autorizado para acceder a este recurso
 
@@ -206,8 +216,9 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string
-                  message:
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
 
     get:
@@ -232,13 +243,13 @@ paths:
               schema:
                 type: object
                 properties:
-                  id:
+                  picture_id:
                     type: number
-                  url:
+                  picture_url:
                     type: string
-                  description:
+                  picture_description:
                     type: string
-                  productId:
+                  product_id:
                     type: number
 
         "500":
@@ -249,8 +260,9 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string
-                  message:
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
 
         "400":
@@ -261,8 +273,9 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string
-                  message:
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
                     example: El parametro de entrada no es correcto
 
@@ -274,8 +287,9 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string
-                  message:
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
                     example: Producto no encontrado
 
@@ -286,7 +300,10 @@ paths:
               schema:
                 type: object
                 properties:
-                  message:
+                  error:
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
                     example: No esta autorizado para acceder a este recurso
 
@@ -304,18 +321,21 @@ paths:
               schema:
                 type: object
                 properties:
-                  message:
+                  error:
+                    type: boolean
+                    example: false
+                  msg:
                     type: string
-                  picture:
-                    type: object
+                  data:
+                    type: object 
                     properties:
-                      id:
+                      picture_id:
                         type: number
-                      url:
+                      picture_url:
                         type: string
-                      description:
+                      picture_description:
                         type: string
-                      productId:
+                      product_id:
                         type: number
 
         "400":
@@ -326,8 +346,9 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string
-                  message:
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
                     example: El parametro de entrada no es correcto
 
@@ -339,8 +360,9 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string
-                  message:
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
                     example: Producto no encontrado
 
@@ -351,7 +373,10 @@ paths:
               schema:
                 type: object
                 properties:
-                  message:
+                  error:  
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
                     example: No esta autorizado para acceder a este recurso
 
@@ -394,13 +419,13 @@ paths:
               schema:
                 type: object
                 properties:
-                  id:
+                  picture_id:
                     type: number
-                  Url:
+                  picture_url:
                     type: string
-                  Description:
+                  picture_description:
                     type: string
-                  productId:
+                  product_id:
                     type: number
 
         "400":
@@ -411,8 +436,9 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string
-                  message:
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
                     example: El parametro de entrada no es correcto
 
@@ -423,7 +449,10 @@ paths:
               schema:
                 type: object
                 properties:
-                  message:
+                  error:  
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
                     example: No esta autorizado para acceder a este recurso
 
@@ -435,8 +464,9 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string
-                  message:
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
 
   /carts/{id}:
@@ -455,20 +485,28 @@ paths:
 
       responses:
         "200":
-          description: lista de usuarios
+          description: Cart
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  type: object
-                  properties:
-                    id:
-                      type: number
-                      example: 4
-                    quantity:
-                      type: number
-                      example: 2
+                type: object
+                properties:
+                  error: 
+                    type: boolean
+                    example: false
+                  msg:
+                    type: string
+                  data:    
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: number
+                          example: 4
+                        quantity:
+                          type: number
+                          example: 2
         "404":
           description: Usuario no encontrado
           content:
@@ -476,7 +514,10 @@ paths:
               schema:
                 type: object
                 properties:
-                  message:
+                  error: 
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
                     example: Usuario no encontrado
 
@@ -488,8 +529,9 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string
-                  message:
+                    type: boolean
+                    example: true
+                  msg:
                     type: string
 
     put:
@@ -760,6 +802,9 @@ paths:
               schema:
                 type: object
                 properties:
+                  error:
+                    type: boolean
+                    example: true
                   msg:
                     type: string
                     example: Not authorized
@@ -896,7 +941,7 @@ paths:
                     example: Server Error
                     type: string
 
-  /users/{id}/cart:
+  /users/{id}/carts:
     get:
       security:
           - bearerAuth: []
@@ -920,7 +965,7 @@ paths:
                 properties:
                   error:
                     type: boolean
-                    example: true
+                    example: false
                   msg:
                     type: string
                   data: 
@@ -1106,7 +1151,7 @@ paths:
                 type: object
                 properties:
                   error:  
-                    type: string
+                    type: boolean
                     example: true
                   msg:
                     type: string
@@ -1122,7 +1167,7 @@ paths:
                   error:
                     type: boolean
                     example: true
-                  message:
+                  msg:
                     type: string
                     example: Server error
         "403":
@@ -1253,7 +1298,8 @@ paths:
                 type: object
                 properties:
                   error:
-                    type: string
+                    type: boolean
+                    example: true
                   message:
                     type: string
     delete:
@@ -1415,10 +1461,7 @@ paths:
                               product_id:
                                 type: number
                         category:
-                          type: object
-                          properties:
-                            category_name: 
-                              type: string
+                          type: string
                         mostwanted:
                           type: boolean
                         stock:
@@ -1459,7 +1502,7 @@ paths:
                   example: "La mejor Macbook del mercado"
                 category_id:
                   type: number
-                  example: 100
+                  example: 2
                 mostwanted:
                   type: boolean
                   example: true
@@ -1534,10 +1577,7 @@ paths:
                       description:
                         type: string
                       category:
-                          type: object
-                          properties:
-                            category_name: 
-                              type: string
+                          type: string
                       mostwanted:
                         type: boolean
                       stock:
@@ -1683,10 +1723,7 @@ paths:
                             product_id:
                               type: number
                       category:
-                          type: object
-                          properties:
-                            category_name: 
-                              type: string
+                          type: string
                       mostwanted:
                         type: boolean
                       stock:
@@ -1762,10 +1799,7 @@ paths:
                             product_id:
                               type: number
                       category:
-                          type: object
-                          properties:
-                            category_name: 
-                              type: string
+                          type: string
                       mostwanted:
                         type: boolean
                       stock:
@@ -1890,10 +1924,7 @@ paths:
                             product_id:
                               type: number
                       category:
-                          type: object
-                          properties:
-                            category_name: 
-                              type: string
+                          type: string
                       mostwanted:
                         type: boolean
                       stock:
@@ -1959,10 +1990,7 @@ paths:
                               product_id:
                                 type: number
                         category:
-                          type: object
-                          properties:
-                            category_name: 
-                              type: string
+                          type: string
                         mostwanted:
                           type: boolean
                         stock:
@@ -2038,13 +2066,8 @@ paths:
                               product_id:
                                 type: number
                         category:
-                          type: object
-                          properties:
-                            category_name: 
-                              type: string
+                          type: string
                         mostwanted:
                           type: boolean
                         stock:
                           type: number
-
-  
